# physics_sim

./: .gitignore  CMakeLists.txt  Makefile
SDL/sdl-mac-arm64/lib/: libSDL3.0.dylib  libSDL3_ttf.0.3.0.dylib
SDL/sdl-mac-arm64/lib/cmake/SDL3_ttf/: SDL3_ttf-shared-targets-release.cmake  SDL3_ttf-shared-targets.cmake
SDL/sdl-mac-arm64/lib/pkgconfig/: sdl3-ttf.pc  sdl3.pc
SDL/sdl-win64/cmake/: SDL3sharedTargets.cmake
SDL/sdl-win64/lib/: SDL3.lib  SDL3_test.lib
src/: button.cpp  checkbox.cpp  decorated_string.cpp  engine.cpp  main.cpp  mass.cpp  menu_window.cpp  ntree.cpp  object.cpp  plane.cpp  spring.cpp
src/gpu-compute/metal/: handler.mm  wrapper.hpp  wrapper.mm
src/gpu-compute/windows/: dxgi_backend.cpp
src/inc/: app_state.hpp  button.hpp  checkbox.hpp  color.hpp  engine.hpp  gpu_compute.hpp  mass.hpp  ntree.hpp  object.hpp  spring.hpp  themes.hpp
src/inc/objects/: checkbox.hpp  decorated_string.hpp  light.hpp  mass.hpp  mirror.hpp  object.hpp  plane.hpp  slider.hpp  textfield.hpp  togglebox.hpp
src/inc/windows/: light_window.hpp  main_window.hpp  menu_window.hpp  object_page.hpp  property_popup.hpp  window.hpp
src/objects/: button.cpp  checkbox.cpp  decorated_string.cpp  light.cpp  mass.cpp  mirror.cpp  object.cpp  plane.cpp  slider.cpp  spring.cpp  textfield.cpp  togglebox.cpp
src/windows/: light_window.cpp  main_window.cpp  menu_window.cpp  object_page.cpp  property_popup.cpp  window.cpp
